# baresip-lvgl-buildroot

./: README
board/qemu/arm-versatile/: linux-multimedia.fragment  linux.fragment
board/qemu/arm-versatile/overlay/etc/init.d/: S01remount
board/qemu/arm-vexpress/: linux-multimedia.fragment
configs/: qemu_arm_versatile_defconfig  qemu_arm_versatile_multimedia_defconfig  qemu_arm_vexpress_multimedia_defconfig
package/: Config.in
package/baresip-lvgl/: CMakeLists.txt  Config.in  LICENSE  README.md  S99baresip-lvgl  applet_manager.c  baresip-lvgl.mk  baresip_manager.c  baresip_manager.h  call_log_applet.c  config_manager.c  config_manager.h  config_manager_debug.h  database_manager.c  database_manager.h  evdev.c  evdev_kb.c  evdev_kb.h  history_manager.c  home_applet.c  lv_conf.h  lv_drv_conf.h  main_fbdev.c  settings_applet.c  test_contact_lookup.c
package/baresip-lvgl/include/: applet.h  applet_manager.h  baresip_manager.h  call_applet.h  config_manager.h  contact_manager.h  database_manager.h  history_manager.h  logger.h
package/baresip-lvgl/src/: applet_manager.h  config_manager.h  database_manager.h  main.c  main_fbdev.c
package/baresip-lvgl/src/applets/: about_applet.c  calculator_applet.c  call_applet.c  call_applet.h  call_log_applet.c  chat_applet.c  contacts_applet.c  home_applet.c  settings_applet.c
package/baresip-lvgl/src/fake_sdl/: SDL.h
package/baresip-lvgl/src/manager/: applet_manager.c  baresip_manager.c  config_manager.c  contact_manager.c  database_manager.c  history_manager.c
package/baresip-lvgl/src/modules/gb28181/: gb28181.c
package/baresip-lvgl/src/ui/: ui_helpers.c  ui_helpers.h
